# Template

./: pyproject.toml
src/graia/template/: __init__.py
