[tool.poetry]
name = "graia-template"
version = "0.0.3"
description = ""
authors = ["GreyElaina <GreyElaina@outlook.com>"]
license = "MIT"
packages = [
    { include = "graia", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2020.7.14"
graia-application-mirai = "*"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
